--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -6,7 +6,13 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: '0 2 * * *'
+    - cron:  '0 1 * * 1'
+    - cron:  '0 2 * * 2'
+    - cron:  '0 3 * * 3'
+    - cron:  '0 4 * * 4'
+    - cron:  '0 0 * * 5'
+    - cron:  '0 3 * * 6'
+    - cron:  '0 1 * * 0'
   workflow_dispatch:
 
 jobs:
@@ -16,9 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-      - name: Roll dice
-        run: echo "PROCEED=$((RANDOM%2))" >> $GITHUB_ENV && echo $GITHUB_ENV
-        shell: bash
+      - name: Sleepy
+        run: sleep ${RANDOM:0:2}m
   
       - name: Check out code
         uses: actions/checkout@v2
