--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -36,4 +36,6 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
       - name: run
-        run: STD_ID=${{ secrets.STD_ID }} PASSWORD=${{ secrets.PASSWORD }} python3 main.py
+        run: |
+          export OPENSSL_CONF=./openssl.cnf
+          STD_ID=${{ secrets.STD_ID }} PASSWORD=${{ secrets.PASSWORD }} python3 main.py
