--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -15,6 +15,9 @@ on:
     - cron:  '0 1 * * 0'
   workflow_dispatch:
 
+env:
+  OPENSSL_CONF: ./openssl.cnf
+
 jobs:
 
   build:
@@ -36,6 +39,4 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
       - name: run
-        run: |
-          export OPENSSL_CONF=./openssl.cnf
-          STD_ID=${{ secrets.STD_ID }} PASSWORD=${{ secrets.PASSWORD }} python3 main.py
+        run: STD_ID=${{ secrets.STD_ID }} PASSWORD=${{ secrets.PASSWORD }} python3 main.py
